# ca_embryogenesis

./: .gitignore  LICENSE  README.md  _meta.py  requirements.txt  setup.cfg  setup.py
core/: cellar_automata.py  experiment.py  image_utils.py  petri_dish.py  rule_model.py  rule_trainer.py  trainers.py  video_writer.py  watchers.py
embryogenesis/: ca_model.py  cellar_automata.py  constants.py  demo_js.py  demo_python.py  exp_config.json  new_rule_model.py  petri_dish.py  rule_model.py  rule_trainer.py  run_ca_grow.py  run_training.py  todo.txt  train_config.json  train_script.py  training.py  update_rule_model.py  utils.py  visualize_functions.py  work_with_pretrained_models.py
embryogenesis/core/: cellar_automata.py  image_utils.py  rule_trainer.py
embryogenesis/model/: ca_model.py  cellar_automat.py  cellar_automata.py  old_train_script.py  petri_dish.py  tf_model_example.py  todo.txt  train.py  train_config.json  train_functions.py  train_script.py  update_rule_model.py  update_rule_trainer.py  utils.py  video_writer.py  visualize_functions.py
embryogenesis/new_model/: exp_config.json  petri_dish.py  todo.txt  train_script.py  update_rule_model.py  update_rule_trainer.py  visualize_functions.py  work_with_pretrained_models.py
embryogenesis/original/: original_code.py  work_with_pretrained_models.py
embryogenesis/scripts/: anime_train_script.py  constants.py  exp_config.json  new_train_script.py  run_ca_grow.py  (+2 more)
growing_neural_ca/: base.py  draw_graph.py
nca/: cell_cultures.py  cellar_automata.py  custom_tf_layers.py  models.py  trainers.py  watchers.py
(+26 files in other folders)
