[metadata]

name = nca
version = 0.1.0
author = Petrov Maksim Andreevich
author_email = maksimallist@gmail.com
description = An open source library for building and training neural cellar automata.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maksimallist/ca_embryogenesis
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6